# euler-metric-naming

./: .gitignore  README.md  pyproject.toml
euler_metric_naming/: __init__.py  _compat.py  axes.py  descriptions.py  matching.py  namespace.py
tests/: test_metric_naming.py
