[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "euler-metric-naming"
version = "0.2.0"
description = "Structured metric naming for the Euler ML ecosystem"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
contract = ["euler-dataset-contract"]
dev = ["pytest", "euler-dataset-contract"]

[tool.pytest.ini_options]
pythonpath = ["."]
